# Projeto---Feedoo

./: .env  .envExample  .gitignore  Cargo.toml  README.md  about.html  index.html  login.html  main.rs  profile.html  register.html  script.js
Codigo Rust/: README.md  main.rs
Codigo Rust/src/: main.rs
HTML + CSS Jorge/frontend/: app.js  index.html  restaurante.html  style.css
MySQL/: Insert de informacoes exemplo.sql  Script do MySQL.sql  Script_do_MySQL.sql
Protótipo Funcional/: README.md  README.mk  README.txt
Protótipo Funcional/frontend/: cadastro-cliente.html  cadastro-cliente.js  dashboard-empresa.js  gerenciar-loja.html  gerenciar-loja.js  login-empresa.js
Protótipo funcional/backend/: Cargo.toml
Protótipo funcional/frontend/: README.md  cadastro-empresa.html  cadastro-empresa.js  (+6 more)
SITE HTML + CSS /: index.html
Site HTML + CSS/: about.html  style.css
Site HTML + CSS /: catalog.html
alternativa manus/: style.css
backend/: Cargo.toml
backend/src/: main.rs  models.rs
backend/src/handlers/: auth.rs  empresas.rs  lojas.rs  mod.rs  produtos.rs
frontend/: cadastro-cliente.html  cadastro-cliente.js  cadastro-empresa.html  cadastro-empresa.js  catalogo.css  catalogo.html  catalogo.js  checkout.css  checkout.html  checkout.js  config-cliente.html  config-cliente.js  config.js  dashboard-empresa.html  dashboard-empresa.js  gerenciar-loja.html  gerenciar-loja.js  historico.html  historico.js  index.html  login-cliente.html  login-cliente.js  login-empresa.html  login-empresa.js  perfil.html  perfil.js  restaurante.css  restaurante.js  style.css
(+12 files in other folders)
