[package]
name = "rust_mysql_project"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.44", features = ["serde"] }
console = "0.16.3"
dialoguer = "0.12.0"
dotenvy = "0.15.7"
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.8", features = ["mysql", "runtime-tokio-native-tls", "rust_decimal"] }
tokio = { version = "1.52.1", features = ["full"] }
